Fix white space issue on profile pictures.

--- a/sites/all/themes/ungoko/less/ungoko-style.less
+++ b/sites/all/themes/ungoko/less/ungoko-style.less
@@ -36,7 +36,7 @@ footer.footer {
 /* Profile images on dashboard */
 .page-oversigt {
   .views-field-field-profile-picture .field-content{
-    padding-right: 10px; }
+    margin-right: 10px; }
 
   .views-row{
     padding-bottom: 10px;
